# opencontext

./: .env.example  .env.template  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  REDDIT_POST.md  context.json  docker-compose.yml  pyproject.toml  record-demo.sh  requirements.txt
.github/: ISSUE_TEMPLATE.md
pcsl/: chunker.py  cli.py  mcp_server.py
pcsl/examples/: claude_integration.py  generic_assistant.py  langchain_integration.py  openai_assistant_integration.py
pcsl/pcsl-directory/: main.py  registry.json
pcsl/pcsl-extension/: background.js  content.js  manifest.json  popup.html  popup.js
pcsl/pcsl-sdk-js/: index.js  package.json
pcsl/pcsl-sdk-python/: setup.py
pcsl/pcsl-sdk-python/pcsl_sdk/: __init__.py  client.py
pcsl/pcsl_server/: Dockerfile  auth.py  main.py
pcsl/spec/: PITCH.md  README.md  SCHEMA.md  SECURITY.md  SPEC.md  context.jsonld
pcsl/spec/examples/: context.json  integration.py
tests/: test_phase3.py  test_server.py
